Fix overflow-y on multiRun panel

--- a/styles/borto-pack.css
+++ b/styles/borto-pack.css
@@ -1,9 +1,9 @@
 .borto-pack-panel {
-  padding: 5px;
+  padding-left: 5px;
+  overflow-y: scroll;
 }
 
 .borto-pack-expandable {
-  padding-bottom: 5px;
 }
 
 .borto-pack-expandable-header {
@@ -17,8 +17,6 @@
   text-align: center;
   font-family: 'Octicons Regular';
   width: 20px;
-  height: 16px;
-  margin-left: 5px;
   padding-right: 5px;
 }
 
@@ -26,7 +24,8 @@
 }
 
 .borto-pack-testcase-box {
-  margin: 5px;
+  margin-top: 5px;
+  margin-bottom: 5px;
 }
 
 .borto-pack-testcase-pre {
